isolate header fixed scrolling issue on mobile, set Tagline width to 345px and .highlight position to keep header fixed

--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,8 @@ body {
   padding: 0;
   margin: 0;
   height: 100%;
-  overflow-x: hidden;
-  overflow-y: visible;
+  /* overflow-x: hidden;
+  overflow-y: visible; */
 }
 
 @media (min-width: 768px) {
